Bug 214025 [@ nsHTMLCSSUtils::IsCSSEditableProperty] r=glazou sr=bz